--- a/index.html
+++ b/index.html
@@ -81,6 +81,86 @@
         </div>
     </div>
 
+    <div id='reservationModal' class='modal fade' role='dialog'>
+        <div class='modal-dialog modal-lg' role='content'>
+            <div class='modal-content'>
+                <div class='modal-header'>
+                    <h4 class='modal-title'>Reserve a Table</h4>
+                    <button type='button' class='close' data-dismiss='modal'>&times;</button>
+                </div>
+                <div class='modal-body'>
+                    <form>
+                        <div class='form-group row'>
+                            <label for='num-guests' class='col-md-2 col-form-label'>Number of Guests</label>
+                            <div class='col-md-10'>
+                                <div class="form-check form-check-inline">
+                                    <input class='form-check-input' type='radio' name='radioOptions' id='radio1'>
+                                    <label class='form-check-label' for='radio1'>1</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class='form-check-input' type='radio' name='radioOptions' id='radio2'>
+                                    <label class='form-check-label' for='radio2'>2</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class='form-check-input' type='radio' name='radioOptions' id='radio3'>
+                                    <label class='form-check-label' for='radio1'>3</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class='form-check-input' type='radio' name='radioOptions' id='radio4'>
+                                    <label class='form-check-label' for='radio4'>4</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class='form-check-input' type='radio' name='radioOptions' id='radio5'>
+                                    <label class='form-check-label' for='radio5'>5</label>
+                                </div>
+
+                                <div class="form-check form-check-inline">
+                                    <input class='form-check-input' type='radio' name='radioOptions' id='radio6'>
+                                    <label class='form-check-label' for='radio6'>6</label>
+                                </div> 
+                            </div>
+                        </div>
+                        <div class='form-group row'>
+                            <label for='smoking-preference' class='col-md-2 col-form-label'>Section</label>
+                            <div class='col-12 col-md-4'>
+                                <div class='btn-group btn-group-toggle' data-toggle='buttons'>
+                                    <label class='btn btn-success active'>
+                                        <input type="radio" name="options" id="option1" autocomplete="off" checked>Non-Smoking
+                                    </label>
+                                    <label class='btn btn-danger'>
+                                        <input type="radio" name="options" id="option2" autocomplete="off" checked>Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class='form-group row'>
+                            <label for='date-time' class='col-md-2 col-form-label'> Date and Time</label>  
+                            <div class='col-12 col-md-4'>
+                                <input type='text' class='form-control' placeholder='Date'>
+                            </div>    
+
+                            <div class='col-12 col-md-4'>
+                                <input type='text' class='form-control' placeholder='Time'>
+                            </div>
+                        </div>
+                        <div class='form-group row'>
+                            <div class='col-md-2'>
+                            </div>
+                            <div class='col-md-4'>
+                                <button type='button' class='btn btn-secondary' data-dismiss='modal'>Cancel</button>
+                                <button type='button' class='btn btn-primary'>Reserve</button>
+                            </div>
+                        </div>    
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class='jumbotron'>
         <div class='container'>
             <div class='row row-header'>
@@ -93,10 +173,9 @@
                 </div>
 
                 <div class='col-12 col-sm-3 align-self-center'>
-                    <a role='button' href='#form'
-                    data-toggle='tooltip' data-html='true'
-                    title='Or Call us at <br><strong>+1 6077277787</strong>'
-                    data-placement='bottom' 
+                    <a role='button' href=''
+                    data-toggle='modal'
+                    data-target='#reservationModal'
                     class='btn btn-block nav-link btn-warning'>Reserve Table</a>
                 </div>
             </div>
@@ -221,72 +300,6 @@
                 </div>
             </div>
         </div>
-        <div id='form' class='row row-content'>
-            <div class='col-12 col-sm-8 offset-sm-2'>
-                <div class='card'>
-                    <h3 class='card-header bg-warning text-white'>Reserve a Table</h3>
-                    <div class='card-body'>
-                        <form>
-                            <div class='form-group row'>
-                                <label for='num-guests' class='col-md-2 col-form-label'>Number of Guests</label>
-                                <div class='col-md-10'>
-                                    <div class="form-check form-check-inline">
-                                        <input class='form-check-input' type='radio' name='radioOptions' id='radio1'>
-                                        <label class='form-check-label' for='radio1'>1</label>
-                                    </div>
-
-                                    <div class="form-check form-check-inline">
-                                        <input class='form-check-input' type='radio' name='radioOptions' id='radio2'>
-                                        <label class='form-check-label' for='radio2'>2</label>
-                                    </div>
-
-                                    <div class="form-check form-check-inline">
-                                        <input class='form-check-input' type='radio' name='radioOptions' id='radio3'>
-                                        <label class='form-check-label' for='radio1'>3</label>
-                                    </div>
-
-                                    <div class="form-check form-check-inline">
-                                        <input class='form-check-input' type='radio' name='radioOptions' id='radio4'>
-                                        <label class='form-check-label' for='radio4'>4</label>
-                                    </div>
-
-                                    <div class="form-check form-check-inline">
-                                        <input class='form-check-input' type='radio' name='radioOptions' id='radio5'>
-                                        <label class='form-check-label' for='radio5'>5</label>
-                                    </div>
-
-                                    <div class="form-check form-check-inline">
-                                        <input class='form-check-input' type='radio' name='radioOptions' id='radio6'>
-                                        <label class='form-check-label' for='radio6'>6</label>
-                                    </div> 
-                                </div>
-                            </div>
-                            <div class='form-group row'>
-                                <label for='date-time' class='col-md-2 col-form-label'> Date and Time</label>  
-                                <div class='col-12 col-md-4'>
-                                    <input type='text' class='form-control' placeholder='Date'>
-                                </div>    
-
-                                <div class='col-12 col-md-4'>
-                                    <input type='text' class='form-control' placeholder='Time'>
-                                </div>
-                            </div>
-                            <div class='form-group row'>
-                                <div class='col-md-2'>
-
-                                </div>
-
-                                <div class='col-md-4'>
-                                    <button type='button' class='btn btn-primary'>Reserve</button>
-
-                                </div>
-                            </div>    
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
 
     <footer class='footer'>
@@ -333,12 +346,6 @@
     <script src='node_modules/jquery/dist/jquery.min.js'></script>
     <script src='node_modules/popper.js/dist/umd/popper.min.js'></script>
     <script src='node_modules/bootstrap/dist/js/bootstrap.min.js'></script>
-
-    <script>
-        $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
